--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,15 @@
 <html lang="en">
   <head>
     <!--For Facebook-->
-    <meta name="og:image" content="%PUBLIC_URL%/static/og-img.jpg" />
     <meta name="og:title" content="md2pdf - Markdown to PDF" />
-    <meta
-      name="og:description"
-      content="Awesome Markdown to PDF! Still upload resume.md to stranger server? Try this Offline Web App!"
-    />
-    <meta name="Description" content="Offline Markdown to PDF! Choose & Edit & Transform without any network requests.">
+    <meta name="Description" content="Markdown to PDF! Choose & Edit & Transform without any network requests.">
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="./favicon.ico" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
